# api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  routes.js  schemas.js  server.js
development/: docker-compose.yml
mongodb/config/: init-db.js
nginx/: nginx.conf
public/includes/: header.html
public/js/: iot.js  urlController.js
public/style/: style.css  style.scss
public/style/components/: _gradient.scss  _header.scss
public/views/: index.html  iot.html  url.html
qdrant/config/: config.yaml
src/api/: __init__.py  config.py  main.py
src/api/classes/: __init__.py  embeddings.py  models.py  openrouter_proxy.py  text_generation.py
src/api/databases/: __init__.py  mongo_db_connector.py  qdrant_connector.py
src/api/providers/: __init__.py  ai_provider.py  anthropic_provider.py  base.py  google_provider.py  mistral_provider.py  openai_provider.py  registry.py
src/api/types/: __init__.py  inference_types.py
src/api/utils/: __init__.py  ensure_database_connection.py  inference.py  logger.py
src/api/v1/: __init__.py  endpoints.py
src/api/v1/classes/: __init__.py  text_generation.py
src/api/v1/routes/: __init__.py  chat.py  llm_proxy.py  models.py
src/api/v1/routes/auth/: auth_models.py  auth_routes.py
src/api/v1/routes/chat/: chat_models.py  chat_routes.py
src/api/v1/routes/embeddings/: embeddings_models.py  embeddings_routes.py
src/api/v1/routes/models/: models_models.py  models_routes.py
src/api/v1/routes/rag/: rag_models.py  rag_routes.py
src/api/v1/routes/responses/: __init__.py  responses_models.py  responses_routes.py
src/api/v1/routes/vector_db/: vector_db_models.py  vector_db_routes.py
src/api/v1/security/: __init__.py  api_auth.py  oauth2_scheme.py
src/api/v1/services/: __init__.py  check.py  get_classes.py  get_databases.py  mistralai_service.py  rag_service.py
src/lm_api/: __init__.py  main.py
src/lm_api/v1/: __init__.py
src/lm_api/v1/classes/: text_generation.py
src/lm_api/v1/routes/: __init__.py
src/lm_api/v1/security/: api_auth.py
src/lm_api/v1/services/: mistralai_service.py
tests/: conftest.py  test_api_auth.py  test_classes.py  test_classes_embeddings.py  test_classes_text_generation.py  test_connectors.py  test_openrouter_proxy.py  test_rag_service.py  test_routes.py  test_routes_chat.py  test_routes_chat_proxy_edge_cases.py  test_routes_embeddings.py  test_routes_main.py  test_routes_models.py  test_routes_responses.py  test_routes_vector_stores.py  test_utils.py  test_utils_inference.py
(+7 files in other folders)
