[project]
name = "lm_api"
version = "0.1.0"
description = "API project using FastAPI, Qdrant, and MongoDB with Docker"
authors = [{ name = "Mathis LAMBERT", email = "mathislambert.dev@gmail.com" }]
dependencies = [
    "fastapi[standard]>=0.115.8",
    "qdrant-client>=1.13.2",
    "motor>=3.7.0",
    "pymongo>=4.3.3",
    "uvicorn>=0.34.0",
    "mistralai>=1.5.0",
    "PyJWT>=2.10.1"
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0,<26.0.0",
    "flake8>=7.1.2,<7.2.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
